--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Dunder Muffin</title>
   </head>
   <body>
@@ -18,9 +24,19 @@
       <h1>Home</h1>
     </section>
     <footer>
-      <p>Adress</p>
-      <p>Mail & Phone</p>
-      <p>Link to social medias</p>
+      <div class="footer-contact">
+        <p>Dunder Muffin</p>
+        <p>300 PATTISON AVE</p>
+        <p>SCRANTON PA 18504-9633</p>
+      </div>
+      <div class="footer-contact">
+        <p>dundermuffin@gmail.com</p>
+        <p>01.23.45.67.89</p>
+      </div>
+      <div class="footer-links">
+        <a href="contact.html"><img src="/assets/icon-instagram.svg" /></a>
+        <a href="contact.html"><img src="/assets/icon-facebook.svg" /></a>
+      </div>
     </footer>
   </body>
 </html>
