--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
@@ -20,8 +21,8 @@
       <a href="menu.html">Menu</a>
       <a href="contact.html">Contact</a>
     </header>
-    <section>
-      <h1>Home</h1>
+    <section class="home">
+      <p>Phrase d'accroche avec un jeu de mot.</p>
     </section>
     <footer>
       <div class="footer-contact">
