--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" />
       <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html"><span class="header-active">Home</span></a>
         <a href="menu.html">Menu</a>
         <a href="contact.html">Contact</a>
       </nav>
