--- a/menu.html
+++ b/menu.html
@@ -22,8 +22,51 @@
         <a href="contact.html">Contact</a>
       </nav>
     </header>
-    <section>
-      <h1>Titre 1</h1>
+    <section class="menu">
+      <h1>Our lunch ideas</h1>
+      <div class="card-wrapper">
+        <div class="recipe-card">
+          <img
+            src="images/recipe-img-default.jpg"
+            alt="Kevin holding his famous chili"
+          />
+          <h2>Kevin's Famous Chili</h2>
+          <p>
+            Beef, red beans, corn, tomato sauce, carots and its slight
+            carpet-flavored seasoning
+          </p>
+        </div>
+        <div class="recipe-card">
+          <img
+            src="images/recipe-img-default.jpg"
+            alt="Kevin holding his famous chili"
+          />
+          <h2>Dwight's Grilled boar with beets</h2>
+          <p>Wild boar, beets (from Schrute farm), potatos, wild herbs</p>
+        </div>
+        <div class="recipe-card">
+          <img
+            src="images/recipe-img-default.jpg"
+            alt="Kevin holding his famous chili"
+          />
+          <h2>Kevin's Famous Chili</h2>
+          <p>
+            Beef, red beans, corn, tomato sauce, carots and its slight
+            carpet-flavored seasoning
+          </p>
+        </div>
+        <div class="recipe-card">
+          <img
+            src="images/recipe-img-default.jpg"
+            alt="Kevin holding his famous chili"
+          />
+          <h2>Kevin's Famous Chili</h2>
+          <p>
+            Beef, red beans, corn, tomato sauce, carots and its slight
+            carpet-flavored seasoning
+          </p>
+        </div>
+      </div>
     </section>
     <footer>
       <div class="footer-contact">
