feature : contact page
* feat: home page

* feat: functionnal and styled home page

* feat: responsive contact page

* feat: contact page after copy paste github

---------

Co-authored-by: Eloïse <131976796+Elo-LH@users.noreply.github.com>

--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,13 @@
         <a href="contact.html">Contact</a>
       </nav>
     </header>
-    <section>
-      <h1>Titre 1</h1>
+    <section class="contact">
+      <img src="https://i.iheart.com/v3/re/new_assets/5f9acbf26e25de06d805edf7">
+      <p>dundermuffin@gmail.com</p>
+      <p>01.23.45.67.89</p>
+      <p>Dunder Muffin<br>
+        300 Pattison ave<br>
+        Scranton 18504-9633</p>
     </section>
     <footer>
       <div class="footer-contact">
