fix: center content of cards, responsive beahavior

--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
     <section class="menu">
-      <h1>Our lunch ideas</h1>
+      <h1>What will you eat today ?</h1>
       <div class="card-wrapper">
         <div class="recipe-card">
           <img
