Feature/recipes display on menu page (#8)
* fix: adding clean font-family link on all pages

* feat: basic recipes cards

* fix: center content of cards, responsive beahavior

--- a/menu.html
+++ b/menu.html
@@ -9,16 +9,6 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Dunder Muffin</title>
   </head>
@@ -32,8 +22,51 @@
         <a href="contact.html">Contact</a>
       </nav>
     </header>
-    <section>
-      <h1>Titre 1</h1>
+    <section class="menu">
+      <h1>What will you eat today ?</h1>
+      <div class="card-wrapper">
+        <div class="recipe-card">
+          <img
+            src="images/recipe-img-default.jpg"
+            alt="Kevin holding his famous chili"
+          />
+          <h2>Kevin's Famous Chili</h2>
+          <p>
+            Beef, red beans, corn, tomato sauce, carots and its slight
+            carpet-flavored seasoning
+          </p>
+        </div>
+        <div class="recipe-card">
+          <img
+            src="images/recipe-img-default.jpg"
+            alt="Kevin holding his famous chili"
+          />
+          <h2>Dwight's Grilled boar with beets</h2>
+          <p>Wild boar, beets (from Schrute farm), potatos, wild herbs</p>
+        </div>
+        <div class="recipe-card">
+          <img
+            src="images/recipe-img-default.jpg"
+            alt="Kevin holding his famous chili"
+          />
+          <h2>Kevin's Famous Chili</h2>
+          <p>
+            Beef, red beans, corn, tomato sauce, carots and its slight
+            carpet-flavored seasoning
+          </p>
+        </div>
+        <div class="recipe-card">
+          <img
+            src="images/recipe-img-default.jpg"
+            alt="Kevin holding his famous chili"
+          />
+          <h2>Kevin's Famous Chili</h2>
+          <p>
+            Beef, red beans, corn, tomato sauce, carots and its slight
+            carpet-flavored seasoning
+          </p>
+        </div>
+      </div>
     </section>
     <footer>
       <div class="footer-contact">
