feat: generating recipes cards with js from json file

--- a/menu.html
+++ b/menu.html
@@ -23,49 +23,7 @@
     </header>
     <section class="menu">
       <h1>What will you eat today ?</h1>
-      <div class="card-wrapper">
-        <div class="recipe-card">
-          <img
-            src="images/recipe-img-default.jpg"
-            alt="Kevin holding his famous chili"
-          />
-          <h2>Kevin's Famous Chili</h2>
-          <p>
-            Beef, red beans, corn, tomato sauce, carots and its slight
-            carpet-flavored seasoning
-          </p>
-        </div>
-        <div class="recipe-card">
-          <img
-            src="images/recipe-img-default.jpg"
-            alt="Kevin holding his famous chili"
-          />
-          <h2>Dwight's Grilled boar with beets</h2>
-          <p>Wild boar, beets (from Schrute farm), potatos, wild herbs</p>
-        </div>
-        <div class="recipe-card">
-          <img
-            src="images/recipe-img-default.jpg"
-            alt="Kevin holding his famous chili"
-          />
-          <h2>Kevin's Famous Chili</h2>
-          <p>
-            Beef, red beans, corn, tomato sauce, carots and its slight
-            carpet-flavored seasoning
-          </p>
-        </div>
-        <div class="recipe-card">
-          <img
-            src="images/recipe-img-default.jpg"
-            alt="Kevin holding his famous chili"
-          />
-          <h2>Kevin's Famous Chili</h2>
-          <p>
-            Beef, red beans, corn, tomato sauce, carots and its slight
-            carpet-flavored seasoning
-          </p>
-        </div>
-      </div>
+      <div class="card-wrapper"></div>
     </section>
     <footer>
       <div class="footer-contact">
@@ -83,5 +41,5 @@
       </div>
     </footer>
   </body>
-  <script type="application/javascript" src="script/index.js"></script>
+  <script type="module" src="script/index.js"></script>
 </html>
