--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,6 @@
     <title>Dunder Muffin</title>
   </head>
   <body>
-    <script type="application/javascript" src="script/index.js"></script>
     <header>
       <img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" />
       <nav>
@@ -23,12 +22,36 @@
       </nav>
     </header>
     <section class="contact">
-      <img src="https://i.iheart.com/v3/re/new_assets/5f9acbf26e25de06d805edf7">
-      <p>dundermuffin@gmail.com</p>
-      <p>01.23.45.67.89</p>
-      <p>Dunder Muffin<br>
-        300 Pattison ave<br>
-        Scranton 18504-9633</p>
+      <h1>Feel free to contact us for more informations</h1>
+      <img
+        src="https://i.iheart.com/v3/re/new_assets/5f9acbf26e25de06d805edf7"
+      />
+      <div class="contact-infos">
+        <p>dundermuffin@gmail.com</p>
+        <p>01.23.45.67.89</p>
+        <p>
+          Dunder Muffin<br />
+          300 Pattison ave<br />
+          Scranton 18504-9633
+        </p>
+      </div>
+      <h2>Contact us directly with this form :</h2>
+      <form class="contact-form">
+        <div class="input-wrapper">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" />
+        </div>
+        <div class="input-wrapper">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" />
+        </div>
+        <div class="input-wrapper">
+          <label for="contact-message">Message</label>
+          <textarea id="contact-message"></textarea>
+        </div>
+
+        <button type="submit">Send</button>
+      </form>
     </section>
     <footer>
       <div class="footer-contact">
@@ -46,4 +69,5 @@
       </div>
     </footer>
   </body>
+  <script type="module" src="script/index.js"></script>
 </html>
