--- a/contact.html
+++ b/contact.html
@@ -37,20 +37,21 @@
       </div>
       <h2>Contact us directly with this form :</h2>
       <form class="contact-form">
-        <div class="input-wrapper">
+        <div class="form-card">
           <label for="name">Name</label>
           <input type="text" id="name" name="name" />
         </div>
-        <div class="input-wrapper">
+        <div class="form-card">
           <label for="email">Email</label>
           <input type="email" id="email" name="email" />
         </div>
-        <div class="input-wrapper">
+        <div class="form-card" id="form-message">
           <label for="contact-message">Message</label>
           <textarea id="contact-message"></textarea>
         </div>
-
-        <button type="submit">Send</button>
+        <div class="button-holder">
+          <button type="submit" method="GET">Send message</button>
+        </div>
       </form>
     </section>
     <footer>
