feat: select menu in html

--- a/menu.html
+++ b/menu.html
@@ -23,6 +23,17 @@
     </header>
     <section class="menu">
       <h1>What will you eat today ?</h1>
+      <form id="select-filter-form">
+        <label for="recipe-filter"
+          >Show
+          <select name="recipe-filter" id="recipe-filter">
+            <option value="all">all</option>
+            <option value="vegetarian">vegetarian</option>
+            <option value="vegan">vegan</option>
+          </select>
+          recipes</label
+        >
+      </form>
       <div class="card-wrapper"></div>
     </section>
     <footer>
