refactor: js files structure

--- a/recipe.html
+++ b/recipe.html
@@ -40,5 +40,5 @@
       </div>
     </footer>
   </body>
-  <script type="module" src="script/index.js"></script>
+  <script type="module" src="script/recipe/index.js"></script>
 </html>
