--- a/contact.html
+++ b/contact.html
@@ -70,5 +70,5 @@
       </div>
     </footer>
   </body>
-  <script type="module" src="script/index.js"></script>
+  <script type="module" src="script/contact/index.js"></script>
 </html>
