--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Dunder Muffin</title>
+    <script type="module" src="script/menu/index.js"></script>
   </head>
   <body>
     <header>
@@ -26,7 +27,7 @@
       <form id="select-filter-form">
         <label for="recipe-filter"
           >Show
-          <select name="recipe-filter" id="recipe-filter">
+          <select name="recipe-filter" id="recipe-filter" onchange="test()">
             <option value="all">all</option>
             <option value="vegetarian">vegetarian</option>
             <option value="vegan">vegan</option>
@@ -52,5 +53,4 @@
       </div>
     </footer>
   </body>
-  <script type="module" src="script/index.js"></script>
 </html>
