feat: functionnal vegetarian or vegan recipes filter

--- a/menu.html
+++ b/menu.html
@@ -27,7 +27,7 @@
       <form id="select-filter-form">
         <label for="recipe-filter"
           >Show
-          <select name="recipe-filter" id="recipe-filter" onchange="test()">
+          <select name="recipe-filter" id="recipe-filter">
             <option value="all">all</option>
             <option value="vegetarian">vegetarian</option>
             <option value="vegan">vegan</option>
