feat: styling select menu

--- a/menu.html
+++ b/menu.html
@@ -28,9 +28,9 @@
         <label for="recipe-filter"
           >Show
           <select name="recipe-filter" id="recipe-filter">
-            <option value="all">all</option>
-            <option value="vegetarian">vegetarian</option>
-            <option value="vegan">vegan</option>
+            <option class="yellow-option" value="all">all</option>
+            <option class="purple-option" value="vegetarian">vegetarian</option>
+            <option class="blue-option" value="vegan">vegan</option>
           </select>
           recipes</label
         >
