--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <p>SCRANTON PA 18504-9633</p>
       </div>
       <div class="footer-contact">
-        <p>dundermuffin@gmail.com</p>
-        <p>01.23.45.67.89</p>
+        <a href="mailto:dundermuffin@gmail.com">dundermuffin@gmail.com</a>
+        <a href="tel:0123456789">01.23.45.67.89</a>
       </div>
       <div class="footer-links">
         <a href="contact.html"><img src="/assets/icon-instagram.svg" /></a>
