--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,11 @@
     <header>
       <img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" />
       <nav>
-        <a href="index.html">Home</a>
-        <a href="menu.html">Menu</a>
-        <a href="contact.html">Contact</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="contact.html"><span class="header-active">Contact<span class="header-active"></span></a></li>
+        </ul>
       </nav>
     </header>
     <section class="contact">
