--- a/menu.html
+++ b/menu.html
@@ -17,9 +17,11 @@
     <header>
       <img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" />
       <nav>
-        <a href="index.html">Home</a>
-        <a href="menu.html">Menu</a>
-        <a href="contact.html">Contact</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="menu.html"><span class="header-active">Menu</span></a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </nav>
     </header>
     <section class="menu">
