feat: basic file structure for ordering

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
               ><span class="header-active">Contact</span></a
             >
           </li>
+          <li><a href="order.html">Order</a></li>
         </ul>
       </nav>
     </header>
