--- a/order.html
+++ b/order.html
@@ -11,24 +11,33 @@
     />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Dunder Muffin</title>
-    <script type="module" src="script/index.js"></script>
   </head>
   <body>
     <header>
       <img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" />
       <nav>
         <ul>
-          <li>
-            <a href="index.html"><span class="header-active">Home</span></a>
-          </li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="menu.html">Menu</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="order.html">Order</a></li>
+          <li><a href="order.html"><span class="header-active"></span>Order</span></a></li>
         </ul>
       </nav>
     </header>
-    <section class="home">
-      <p>Phrase d'accroche avec un jeu de mot.</p>
+    <section class="menu">
+      <h1>What will you eat today ?</h1>
+      <form id="select-filter-form">
+        <label for="recipe-filter"
+          >Show
+          <select name="recipe-filter" id="recipe-filter">
+            <option class="yellow-option" value="all">all</option>
+            <option class="purple-option" value="vegetarian">vegetarian</option>
+            <option class="blue-option" value="vegan">vegan</option>
+          </select>
+          recipes</label
+        >
+      </form>
+      <div class="card-wrapper"></div>
     </section>
     <footer>
       <div class="footer-contact">
