--- a/recipe.html
+++ b/recipe.html
@@ -18,8 +18,11 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="menu.html"><span class="header-active">Menu</span></a></li>
+          <li>
+            <a href="menu.html"><span class="header-active">Menu</span></a>
+          </li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="order.html">Order</a></li>
         </ul>
       </nav>
     </header>
