--- a/order.html
+++ b/order.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Dunder Muffin</title>
+    <script type="module" src="script/order/index.js"></script>
   </head>
   <body>
     <header>
@@ -24,20 +25,10 @@
         </ul>
       </nav>
     </header>
-    <section class="menu">
-      <h1>What will you eat today ?</h1>
-      <form id="select-filter-form">
-        <label for="recipe-filter"
-          >Show
-          <select name="recipe-filter" id="recipe-filter">
-            <option class="yellow-option" value="all">all</option>
-            <option class="purple-option" value="vegetarian">vegetarian</option>
-            <option class="blue-option" value="vegan">vegan</option>
-          </select>
-          recipes</label
-        >
-      </form>
-      <div class="card-wrapper"></div>
+    <section class="order">
+      <h1>Your basket</h1>
+      <div class="basket-wrapper"></div>
+      <div class="valid-order"></div>
     </section>
     <footer>
       <div class="footer-contact">
