--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
         <p>300 PATTISON AVE</p>
         <p>SCRANTON PA 18504-9633</p>
       </div>
-      <div class="footer-contact">
+      <div class="footer-contact__mail-tel">
         <a href="mailto:dundermuffin@gmail.com">dundermuffin@gmail.com</a>
         <a href="tel:0123456789">01.23.45.67.89</a>
       </div>
