refactor: rename basket to orders

--- a/order.html
+++ b/order.html
@@ -27,7 +27,7 @@
     </header>
     <section class="order">
       <h1>Your basket</h1>
-      <div class="basket-wrapper"></div>
+      <div class="orders-wrapper"></div>
       <div class="valid-order"></div>
     </section>
     <footer>
