feat: display empty order when all is removed in order page

--- a/order.html
+++ b/order.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
     <section class="order">
-      <h1>Your basket</h1>
+      <h1>Your order :</h1>
       <div class="orders-wrapper"></div>
       <div class="valid-order"></div>
     </section>
