--- a/contact.html
+++ b/contact.html
@@ -15,16 +15,12 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" />
+      <a href="index.html"><img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" /></a>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="menu.html">Menu</a></li>
-          <li>
-            <a href="contact.html"
-              ><span class="header-active">Contact</span></a
-            >
-          </li>
+          <li><a href="index.html"><span class="header-unactive">Home</span></a></li>
+          <li><a href="menu.html"><span class="header-unactive">Menu</span></a></li>
+          <li><a href="contact.html"><span class="header-active">Contact</span></a></li>
         </ul>
       </nav>
     </header>
