--- a/recipe.html
+++ b/recipe.html
@@ -14,15 +14,12 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" />
+      <a href="index.html"><img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" /></a>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li>
-            <a href="menu.html"><span class="header-active">Menu</span></a>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="order.html">Order</a></li>
+          <li><a href="index.html"><span class="header-unactive">Home</span></a></li>
+          <li><a href="menu.html"><span class="header-active">Menu</span></a></li>
+          <li><a href="contact.html"><span class="header-unactive">Contact</span></a></li>
         </ul>
       </nav>
     </header>
@@ -35,7 +32,7 @@
         <p>300 PATTISON AVE</p>
         <p>SCRANTON PA 18504-9633</p>
       </div>
-      <div class="footer-contact">
+      <div class="footer-contact__mail-tel">
         <a href="mailto:dundermuffin@gmail.com">dundermuffin@gmail.com</a>
         <a href="tel:0123456789">01.23.45.67.89</a>
       </div>
