fix: responsive header and order tab

--- a/menu.html
+++ b/menu.html
@@ -15,12 +15,23 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" /></a>
+      <a href="index.html" id="logo-link"
+        ><img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin"
+      /></a>
       <nav>
         <ul>
-          <li><a href="index.html"><span class="header-unactive">Home</span></a></li>
-          <li><a href="menu.html"><span class="header-active">Menu</span></a></li>
-          <li><a href="contact.html"><span class="header-unactive">Contact</span></a></li>
+          <li>
+            <a href="index.html" class="header-unactive">Home</a>
+          </li>
+          <li>
+            <a href="menu.html" class="header-active">Menu</a>
+          </li>
+          <li>
+            <a href="contact.html" class="header-unactive">Contact</a>
+          </li>
+          <li>
+            <a href="order.html" class="header-unactive">Order</a>
+          </li>
         </ul>
       </nav>
     </header>
