--- a/order.html
+++ b/order.html
@@ -15,13 +15,23 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin" />
+      <a href="index.html" id="logo-link"
+        ><img class="logo" src="images/logo.png" alt="Logo de Dunder Muffin"
+      /></a>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="menu.html">Menu</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="order.html"><span class="header-active"></span>Order</span></a></li>
+          <li>
+            <a href="index.html" class="header-unactive">Home</a>
+          </li>
+          <li>
+            <a href="menu.html" class="header-unactive">Menu</a>
+          </li>
+          <li>
+            <a href="contact.html" class="header-unactive">Contact</a>
+          </li>
+          <li>
+            <a href="order.html" class="header-active">Order</a>
+          </li>
         </ul>
       </nav>
     </header>
