feat: basic structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Dunder Muffin</title>
-    <script type="module" src="script/index.js"></script>
+    <script type="module" src="script/home/index.js"></script>
   </head>
   <body>
     <header>
@@ -36,7 +36,22 @@
       </nav>
     </header>
     <section class="home">
-      <p>Phrase d'accroche avec un jeu de mot.</p>
+      <h1>Looking at pictures of food on your computer like Kevin ?</h1>
+      <p>
+        Don't give up on your lunch dream and
+        <a href="./menu.html">order your favorites !</a>
+      </p>
+      <div class="recipe-of-the-week">
+        <h2>Recipe of the week</h2>
+        <p>Alfredo's fettucine</p>
+        <img src="./images/carbo-load.jpg" />
+      </div>
+      <div class="new-recipe">
+        <h2>New recipe</h2>
+        <p>Michael's special Ice Cream</p>
+        <img src="./images/ice-cream.jpg" />
+        <img src="./images/mayonnaise.jpg" />
+      </div>
     </section>
     <footer>
       <div class="footer-contact">
