--- a/index.html
+++ b/index.html
@@ -43,14 +43,30 @@
       </p>
       <div class="recipe-of-the-week">
         <h2>Recipe of the week</h2>
-        <p>Alfredo's fettucine</p>
-        <img src="./images/carbo-load.jpg" />
+        <div class="content-wrapper">
+          <div class="recipe-text">
+            <h3>Alfredo's fettucine</h3>
+            <p>What's better before running a marathon ? You tell me !</p>
+            <a href="/recipe.html?id=9">See details -></a>
+          </div>
+          <img src="./images/carbo-load.jpg" />
+        </div>
       </div>
       <div class="new-recipe">
         <h2>New recipe</h2>
-        <p>Michael's special Ice Cream</p>
-        <img src="./images/ice-cream.jpg" />
-        <img src="./images/mayonnaise.jpg" />
+        <div class="content-wrapper">
+          <div class="recipe-text">
+            <h3>Michael's Ice Cream</h3>
+            <p>"Only thing that could make this day better is ice cream"</p>
+            <p>
+              Freshly made ice cream Michael's style, what's better after a day
+              of hard work ?
+            </p>
+            <a href="/recipe.html?id=10">See details -></a>
+          </div>
+          <img src="./images/ice-cream.jpg" />
+        </div>
+        <img id="mayonnaise" src="./images/mayonnaise.jpg" />
       </div>
     </section>
     <footer>
