Feature/content for home page (#35)
* feat: basic structure

* feat: adding data (img and json)

* feat: final design with new recipe and recipe of the week

* feat: responsive home page text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="styles/styles.css" />
     <title>Dunder Muffin</title>
-    <script type="module" src="script/index.js"></script>
+    <script type="module" src="script/home/index.js"></script>
   </head>
   <body>
     <header>
@@ -36,7 +36,38 @@
       </nav>
     </header>
     <section class="home">
-      <p>Phrase d'accroche avec un jeu de mot.</p>
+      <h1>Looking at pictures of food on your computer like Kevin ?</h1>
+      <p>
+        Don't give up on your lunch dream and
+        <a href="./menu.html">order your favorites !</a>
+      </p>
+      <div class="recipe-of-the-week">
+        <h2>Recipe of the week</h2>
+        <div class="content-wrapper">
+          <div class="recipe-text">
+            <h3>Alfredo's fettucine</h3>
+            <p>What's better before running a marathon ? You tell me !</p>
+            <a href="/recipe.html?id=9">See details -></a>
+          </div>
+          <img src="./images/carbo-load.jpg" />
+        </div>
+      </div>
+      <div class="new-recipe">
+        <h2>New recipe</h2>
+        <div class="content-wrapper">
+          <div class="recipe-text">
+            <h3>Michael's Ice Cream</h3>
+            <p>"Only thing that could make this day better is ice cream"</p>
+            <p>
+              Freshly made ice cream Michael's style, what's better after a day
+              of hard work ?
+            </p>
+            <a href="/recipe.html?id=10">See details -></a>
+          </div>
+          <img src="./images/ice-cream.jpg" />
+        </div>
+        <img id="mayonnaise" src="./images/mayonnaise.jpg" />
+      </div>
     </section>
     <footer>
       <div class="footer-contact">
