feature: html title, css animations links home page, corrected menu order-options in css

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Dunder Muffin</title>
+    <title>Dunder Muffin - Contact</title>
     <script type="module" src="script/contact/index.js"></script>
   </head>
   <body>
