--- a/order.html
+++ b/order.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Dunder Muffin</title>
+    <title>Dunder Muffin - Order</title>
     <script type="module" src="script/order/index.js"></script>
   </head>
   <body>
