--- a/recipe.html
+++ b/recipe.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Dunder Muffin</title>
+    <title>Dunder Muffin - Recipe</title>
   </head>
   <body>
     <header>
