--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Dunder Muffin</title>
+    <title>Dunder Muffin - Menu</title>
     <script type="module" src="script/menu/index.js"></script>
   </head>
   <body>
