refactor: home in em/rem

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </nav>
     </header>
     <section class="home">
-      <h1>Looking at pictures of food on your computer like Kevin ?</h1>
-      <p>
+      <h1>Looking at pictures of food on your computer?</h1>
+      <p class="home-subtitle">
         Don't give up on your lunch dream and
         <a href="./menu.html">order your favorites !</a>
       </p>
