refactor: recipe page in em/rem

--- a/recipe.html
+++ b/recipe.html
@@ -34,9 +34,9 @@
         </ul>
       </nav>
     </header>
-    <section class="menu">
-      <div class="recipe-wrapper"></div>
-    </section>
+    <div class="menu">
+      <article class="recipe-wrapper"></article>
+    </div>
     <footer>
       <div class="footer-contact">
         <p>Dunder Muffin</p>
