--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
         </ul>
       </nav>
     </header>
-    <section class="menu">
+    <div class="menu">
       <h1>What will you eat today ?</h1>
       <form id="select-filter-form">
         <label for="recipe-filter"
@@ -49,7 +49,7 @@
         >
       </form>
       <div class="card-wrapper"></div>
-    </section>
+    </div>
     <footer>
       <div class="footer-contact">
         <p>Dunder Muffin</p>
