refactor: html semantic and alt for contact and order

--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,13 @@
         </ul>
       </nav>
     </header>
-    <section class="contact">
+    <article class="contact">
       <h1>Feel free to contact us for more informations</h1>
       <img
         src="https://i.iheart.com/v3/re/new_assets/5f9acbf26e25de06d805edf7"
+        alt=""
       />
-      <div class="contact-infos">
+      <section class="contact-infos">
         <a href="mailto:dundermuffin@gmail.com">dundermuffin@gmail.com</a><br />
         <a href="tel:0123456789">01.23.45.67.89</a>
         <p>
@@ -48,7 +49,7 @@
           300 Pattison ave<br />
           Scranton 18504-9633
         </p>
-      </div>
+      </section>
       <h2>Contact us directly with this form :</h2>
       <form
         class="contact-form"
@@ -86,7 +87,7 @@
           <button type="submit">Send message</button>
         </div>
       </form>
-    </section>
+    </article>
     <footer>
       <div class="footer-contact">
         <p>Dunder Muffin</p>
