--- a/order.html
+++ b/order.html
@@ -35,11 +35,11 @@
         </ul>
       </nav>
     </header>
-    <section class="order">
+    <div class="order">
       <h1>Your order :</h1>
       <div class="orders-wrapper"></div>
       <div class="valid-order"></div>
-    </section>
+    </div>
     <footer>
       <div class="footer-contact">
         <p>Dunder Muffin</p>
